--- a/session_share/package.json
+++ b/session_share/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@okta/okta-auth-js": "^4.7.1",
-    "@okta/okta-react": "^4.1.0",
-    "@okta/okta-signin-widget": "^5.3.2",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "isomorphic-fetch": "^3.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "5.2.0",
+    "@okta/okta-auth-js": "*",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "2.0.3",
+    "text-encoding": "0.7.0",
+    "@okta/okta-react": "^6.7.0",
+"react-scripts": "4.0.1",
+"@okta/okta-signin-widget": "^6.7.1",
+"web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^1.3.2",
+    "dotenv": "^16.0.0",
+    "vite": "^2.9.15"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
